# sfml-works

./: .gitignore  CMakeLists.txt
resourses/shaders/: shader.frag
sourse/: main.cpp
